<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_gravity="bottom"
    android:visibility="visible"
    android:id="@+id/notification_generate"
    android:layout_height="match_parent">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="#fff"
           android:id="@+id/request_received"
           android:visibility="visible"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:padding="7sp">

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:id="@+id/back_button"
                   android:padding="3sp"
                   android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>


               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:textColor="#000"
                   android:text="@string/ven_order_heading"
                   android:gravity="center"/>

           </LinearLayout>

           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:cardCornerRadius="8sp"
               app:cardMaxElevation="7sp"
               android:layout_margin="10sp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:padding="4sp">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/order_no"
                       android:id="@+id/order_no1"
                       android:textColor="#000"
                       android:textStyle="bold"
                       android:textSize="17sp"
                       android:drawableLeft="@drawable/ic_access_time_black_24dp"
                       android:drawablePadding="10sp"/>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/payment_mode"
                       android:textSize="17sp"
                       android:paddingLeft="37sp"
                       android:paddingTop="5sp"/>

               </LinearLayout>
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:cardCornerRadius="8sp"
               app:cardMaxElevation="7sp"
               android:layout_margin="10sp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:padding="4sp">


                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:padding="15sp"
                       android:orientation="horizontal">

                       <LinearLayout
                           android:layout_width="0dp"
                           android:layout_weight=".68"
                           android:layout_height="wrap_content"
                           android:orientation="vertical">

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/ven_order_head1"
                               android:textSize="17sp"
                               android:textColor="#242222"
                               android:paddingTop="9sp"
                               android:paddingBottom="3sp"
                               android:paddingRight="3sp"
                               android:textStyle="bold"/>

                           <TextView
                               android:id="@+id/user_mobile"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:paddingLeft="9sp"
                               android:paddingTop="3sp"
                               android:paddingRight="3sp"
                               android:paddingBottom="3sp"
                               android:text="@string/ven_user_mobile"
                               android:textColor="#000"
                               android:textSize="15sp" />

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:paddingLeft="9sp"
                               android:paddingTop="1sp"
                               android:paddingRight="3sp"
                               android:paddingBottom="9sp"
                               android:text="@string/ven_order_address"
                               android:id="@+id/address_to_vendor1"
                               android:textColor="#000"
                               android:textSize="15sp"/>

                       </LinearLayout>

                       <LinearLayout
                           android:layout_width="0dp"
                           android:layout_weight=".32"
                           android:layout_height="match_parent"
                           android:layout_marginRight="7sp"
                           android:orientation="vertical"
                           android:gravity="center">


                           <de.hdodenhof.circleimageview.CircleImageView
                               android:layout_width="60sp"
                               android:layout_height="60sp"
                               android:src="@drawable/cleaning_off"
                               android:layout_gravity="center"
                               android:contentDescription="Picture is not uploading"
                               android:id="@+id/user_image_vendor"
                               app:civ_border_width="2sp"
                               app:civ_border_color="#FF4500"/>

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:padding="3sp"
                               android:text="@string/ven_user_name"
                               android:id="@+id/user_name"
                               android:textColor="#000"
                               android:textSize="15sp" />

                       </LinearLayout>

                   </LinearLayout>

               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:cardCornerRadius="8sp"
               app:cardMaxElevation="7sp"
               android:layout_margin="10sp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:padding="5sp">

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/service"
                       android:textColor="#242222"
                       android:textSize="17sp"
                       android:textStyle="bold"
                       android:padding="3sp"/>


                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="TAP FITTING"
                       android:id="@+id/service_info"
                       android:textColor="#000"
                       android:textSize="15sp"
                       android:padding="3sp"/>



              <!-- <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:padding="5sp">-->

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/service_from_date"
                       android:id="@+id/service_ven_from_date"
                       android:textColor="#242222"
                       android:textSize="17sp"
                       android:padding="3sp"/>


                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/service_to_date"
                       android:id="@+id/service_ven_to_date"
                       android:textSize="17sp"
                       android:visibility="gone"
                       android:textColor="#000"
                       android:padding="3sp"/>
               </LinearLayout>
              <!-- </LinearLayout>-->

           </androidx.cardview.widget.CardView>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginTop="10sp"
               android:orientation="horizontal">

               <Button
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:text="@string/accept"
                   android:id="@+id/accept_request"
                   android:background="@drawable/phone_call"
                   android:layout_margin="7sp"
                   android:gravity="start|center"
                   android:paddingLeft="10sp"
                   android:drawableLeft="@drawable/ic_done_black_24dp"
                   android:drawablePadding="7sp"/>

               <Button
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:text="@string/reject"
                   android:id="@+id/reject_request"
                   android:background="@drawable/phone_call"
                   android:layout_margin="7sp"
                   android:gravity="start|center"
                   android:paddingLeft="10sp"
                   android:drawableLeft="@drawable/ic_close_black_24dp"
                   android:drawablePadding="7sp"/>

           </LinearLayout>



       </LinearLayout>



   </LinearLayout>
</LinearLayout>