<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#ffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8sp"
            app:cardMaxElevation="7sp"
            android:layout_margin="15sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_no"
                    android:id="@+id/order_no2"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:drawableLeft="@drawable/ic_access_time_black_24dp"
                    android:drawablePadding="10sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_mode"
                    android:textSize="17sp"
                    android:paddingLeft="37sp"
                    android:paddingTop="5sp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/cancel_popup"
                android:src="@drawable/ic_cross"/>

        </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:padding="8sp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/call_user"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:paddingLeft="5sp"
                android:background="@drawable/phone_call"
                android:drawableLeft="@drawable/ic_phone_in_talk_black_24dp"
                android:drawablePadding="7sp"
                android:gravity="center"
                android:text="@string/call" />


            <Button
                android:id="@+id/chat_user"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:paddingLeft="5sp"
                android:background="@drawable/phone_call"
                android:drawableLeft="@drawable/ic_chat_black_24dp"
                android:drawablePadding="7sp"
                android:gravity="center"
                android:text="@string/message" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>